--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.4",
-        "illuminate/support": "~5",
-        "guzzlehttp/guzzle": "~5"
+        "illuminate/support": ">=5",
+        "guzzlehttp/guzzle": ">=5"
     },
     "autoload": {
         "psr-4": {
