--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,15 @@
             "Pauly4it\\LaraTurk\\": "src/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Pauly4it\\LaraTurk\\LaraTurkServiceProvider"
+            ],
+            "aliases": {
+                "LaraTurk": "Pauly4it\\LaraTurk\\Facades\\LaraTurk"
+            }
+        }
+    },
     "minimum-stability": "dev"
 }
